<resources>
    <string name="app_name">BookShare</string>
    <string name="prompt_email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="iniciar_sesion_google">Iniciar Sesión con Google</string>
    <string name="correoElectronico">Correo electrónico</string>
    <string name="login">Login</string>
    <string name="registro">Registro</string>
    <string name="ConfirmarRegistro">Regitrarme ahora</string>
    <string name="confirmarRegistro">Confirmar contraseña</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="nombreDelAutor">Nombre del autor</string>
    <string name="apellidos">Apellidos</string>
    <string name="ciudad">Ciudad</string>
    <string name="fechaDePublicacion">Fecha de publicacion</string>
    <string name="codigoPostal">Codigo postal</string>
    <string name="idioma">Idioma</string>
    <string name="guardarDatos">Guardar datos</string>
    <string name="editorial">Editorial</string>
    <string name="autor">Autor</string>
    <string name="perfil">Perfil</string>
    <string name="perfilLibro">Perfil libro</string>
    <string name="nombreLibro">Nombre del libro</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="isbn">ISBN</string>
    <string name="agregarLibro">Agregar Libro</string>
    <string name="editarLibro">Editar Libro</string>
    <string name="borrarLibro">Borrar libro</string>

</resources>