<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingDefaultResource">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nombreDellibrorEditText"
                    android:layout_width="194dp"
                    android:layout_height="42dp"
                    android:hint="@string/nombreLibro"
                    android:layout_gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.138"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.297" />

                <ImageView
                    android:id="@+id/subir_imagen"
                    android:layout_width="101dp"
                    android:layout_height="101dp"
                    app:backgroundTint="#FFFFFF"
                    app:srcCompat="@android:drawable/ic_menu_gallery"
                    app:iconSize="80dp"
                    app:iconTint="#4b5c6b"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="622dp"
                android:orientation="vertical">

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/nombreDelAutorTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre del autor"
                    android:textColor="@color/black"
                    android:textSize="50px"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.113"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.218"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/nombreDelAutorEditText"
                    android:layout_width="194dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:hint="@string/autor"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.138"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.297" />

                <TextView
                    android:id="@+id/editorialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Editorial"
                    android:textColor="@color/black"
                    android:textSize="50px"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.087"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.393"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/editorialEditText"
                    android:layout_width="194dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:hint="@string/editorial"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.138"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.474" />

                <TextView
                    android:id="@+id/idiomaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Idioma"
                    android:textColor="@color/black"
                    android:textSize="50px"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.079"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.563"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/idiomaEditText"
                    android:layout_width="194dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:hint="@string/idioma"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.129"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.663" />

                <TextView
                    android:id="@+id/ISBNTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ISBN"
                    android:textColor="@color/black"
                    android:textSize="50px"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.076"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.746" />

                <EditText
                    android:id="@+id/ISBNEditText"
                    android:layout_width="194dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:hint="@string/isbn"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.138"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.85" />


                <TextView
                    android:id="@+id/sinopsisTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sinopsis"
                    android:textColor="@color/black"
                    android:textSize="50px"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.076"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.746" />

                <EditText
                    android:id="@+id/sinopsisEditText"
                    android:layout_width="194dp"
                    android:layout_height="80dp"
                    android:ems="10"
                    android:hint="@string/sinopsis"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.138"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.85" />


                <TextView
                    android:id="@+id/localizacionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Localización"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="50px"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.076"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.746" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/ciudadTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ciudad"
                    android:textColor="@color/black"
                    android:textSize="50px"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.076"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.746" />

                <EditText
                    android:id="@+id/ciudadEditText"
                    android:layout_width="194dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:hint="@string/ciudad"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.138"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.85" />

                <TextView
                    android:id="@+id/CPTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Codigo Postal"
                    android:textColor="@color/black"
                    android:textSize="50px"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.076"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.746" />

                <EditText
                    android:id="@+id/CPEditText"
                    android:layout_width="194dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:hint="@string/codigoPostal"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.138"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.85" />

                <Button
                    android:id="@+id/btnEditarLibro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="28dp"
                    android:backgroundTint="@color/ColorApp"
                    android:enabled="true"
                    android:text="@string/editarLibro"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>